# usaco_benchmark

./: .env.example  .gitignore  README.md  main.py  main_evaluator.py  run_demo.py  test.py
src/: launcher.py
usaco_benchmark_AgentBeats/: README.md  main.py  pyproject.toml
usaco_benchmark_AgentBeats/green/usaco-green/: main.py
usaco_benchmark_AgentBeats/green/usaco-green/problems/gift1/: description.txt
usaco_benchmark_AgentBeats/green/usaco-green/problems/ride/: description.txt
usaco_benchmark_AgentBeats/green/usaco-green/src/green_agent/: __init__.py  agent.py
usaco_benchmark_AgentBeats/problems/friday/: friday.txt
usaco_benchmark_AgentBeats/problems/gift1/: gift1.txt
usaco_benchmark_AgentBeats/problems/ride/: ride.txt
usaco_benchmark_AgentBeats/solutions/: ride_solution.py
usaco_benchmark_AgentBeats/src/: __init__.py  launcher.py
usaco_benchmark_AgentBeats/src/green_agent/: __init__.py  agent.py  usaco_green_agent.toml
usaco_benchmark_AgentBeats/src/my_util/: __init__.py
usaco_benchmark_AgentBeats/src/white_agent/: agent.py
usaco_benchmark_AgentBeats/usaco-green/src/: __init__.py
usaco_benchmark_AgentBeats/usaco-green/src/green_agent/: usaco_green_agent.toml
usaco_benchmark_AgentBeats/usaco-white/solutions_agent/: gift1_generated.py
usaco_benchmark_AgentBeats/usaco-white/src/white_agent/: __init__.py  agent.py
usaco_benchmark_AgentBeats/white/usaco-white/: main.py  pyproject.toml
usaco_benchmark_AgentBeats/white/usaco-white/solutions_agent/: friday_generated.py
usaco_benchmark_AgentBeats/white/usaco-white/src/my_util/: my_a2a.py
(+12 files in other folders)
