[project]
name = "usaco-benchmark"
version = "0.1.0"
description = "USACO Green Agent - AgentBeats compatible benchmark for USACO programming problems."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "a2a-sdk[http-server]>=0.3.8",
    "python-dotenv>=0.19.0",
    "typer>=0.19.2",
    "uvicorn>=0.37.0",
    "psutil>=5.9.0",
    "litellm>=1.0.0",
    "httpx>=0.24.0",
    "tomli>=2.0.0; python_version < '3.11'",
]

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"
