[project]
name = "usaco-agent-evaluation"
version = "1.0.0"
description = "USACO Agent Evaluation System - Agentified code evaluation framework"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.9.0",
    "uvicorn>=0.27.0",
    "httpx>=0.26.0",
    "a2a-sdk[http-server]>=0.3.8",
    "python-dotenv>=1.0.0",
    "huggingface-hub>=0.20.0",
    "psutil>=5.9.0",
    "pydantic-settings>=2.0.0",
]

[project.scripts]
usaco-eval = "main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]